Searchbox & FourSquare search string set up

--- a/src/index.html
+++ b/src/index.html
@@ -7,5 +7,12 @@
   <title>Search Popular</title>
 </head>
 <body>
+  <div class="search-page">
+    <form id="search">
+      <input type="text" id="searchBox" class="search-box" placeholder="Where are you looking to go?">
+      <button type="submit">Search</button>
+    </form>
+    <div id="searchResultsBox" class="search-results"></div>
+  </div>
 </body>
 </html>
